@@ -1,3 +1,8 @@
+2011-03-10  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/winmain.c (WinExit): add missing void parameter
+	* src/win/wgraph.c (drawgraph): add missing init
+	
 2011-03-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* config/makefile.nt: add chm help (update of SF patch 3191892 by 
